# llm-benchmarking

./: .claudeme  .gitignore  README.md  main.py  pyproject.toml  run_dashboard.sh  test_aggregator_integration.py  test_llm_integration.py  test_report_integration.py  test_scrapers.py
config/: sources.yaml
docs/: 01_project_structure_uv.md  02_backend_data_collection.md  03_llm_invocation.md  04_report_generation.md  05_frontend_roadmap.md
src/frontend/: __init__.py
src/frontend/streamlit/: README.md  __init__.py  app.py
src/frontend/streamlit/components/: __init__.py  charts.py
src/frontend/streamlit/pages/: 1_📊_Model_Explorer.py  2_📈_Historical_Trends.py  3_🔍_Comparison.py  4_💬_Ask_Questions.py
src/frontend/streamlit/utils/: __init__.py  config.py  data_loader.py
src/llm_benchmarks/: data_aggregator.py  main.py  pipeline.py
src/llm_benchmarks/database/: __init__.py  connection.py  manager.py  models.py  repository.py  schema.py
src/llm_benchmarks/database/migrations/: __init__.py  migration_runner.py  v001_initial.sql
src/llm_benchmarks/llm/: __init__.py  analyzer.py  ollama_client.py  prompts.py
src/llm_benchmarks/reports/: __init__.py  formatters.py  generator.py  models.py
src/llm_benchmarks/scrapers/: base.py  lmarena.py  lmsys.py  registry.py  simon_willison.py
tests/: test_data_aggregator.py  test_pipeline.py  test_pipeline_integration.py  test_run_scraper.py
tests/llm/: test_analyzer.py  test_ollama_client.py  test_prompts.py
tests/scrapers/: test_lmsys.py  test_registry.py
